2006-12-13  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py (_set_column_order): Correctly
	check for metadata being None.

2006-12-13  Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
	* test/GrampsDb/GrampsDbBase_Test.py: fix test case to work with 
	reindex_reference_map

2006-12-13  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Filters/Rules/Person/_HasRelationship.py: Fix FamilyRelType
	comparison (closes #758)

2006-12-12  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (about): Only displaye translator credits
	when they exist.
	* src/images/Makefile.am (icon_DATA): Install icon into pixmaps dir.

2006-12-12  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ArgHandler.py: Check recent file for existance before trying to
	load that file. (bug #447)
	* src/DataViews/_RelationView.py: Escape XML special chars
	* src/DataViews/_PedigreeView.py: Escape XML special chars
	* src/plugins/TestcaseGenerator.py: Create media note object;
	Randomize URL
	* src/GrampsDb/_WriteXML.py: Escape XML special chars

2006-12-11  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditMedia.py: fix menu title (bug#755)
	* src/GrampsDb/_WriteXML.py: handle XML escapes
	* src/DisplayModels/_BaseModel.py: handle ignored values in filtering

2006-12-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_RelationView.py (change_person): Break endless loop
	by passing the return values from _change_person.

2006-12-10  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: fix 0000597: Narrative web site 
		generates uppercase directory names but lower case hrefs

2006-12-10  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: RunDatabaseRepair integration
	* src/GrampsDb/_WriteGedcom.py: RunDatabaseRepair integration
	* src/QuestionDialog.py: RunDatabaseRepair dialog to warn users to run
	database checks

2006-12-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>