@@ -512,6 +512,9 @@ src/Filters/Rules/Family/_ChildHasNameOf.py
 src/Filters/Rules/Family/_SearchFatherName.py
 src/Filters/Rules/Family/_SearchChildName.py
 src/Filters/Rules/Family/_SearchMotherName.py
+src/Filters/Rules/Family/_RegExpFatherName.py
+src/Filters/Rules/Family/_RegExpMotherName.py
+src/Filters/Rules/Family/_RegExpChildName.py
 src/Filters/Rules/Family/_MemberBase.py
 src/Filters/Rules/Family/_HasMarkerOf.py
 
