@@ -1,3 +1,6 @@
+2006-12-13  Alex Roitman  <shura@gramps-project.org>
+	* POTFILES.in: List new files.
+
 2006-12-10  Eero Tamminen  <eerot@sf>
         * fi.po: merge with latest, fix all % mismatches and repo translations
 
